fixed editItemForm validation and changed init form margin on small devices

--- a/src/sass/_layout.scss
+++ b/src/sass/_layout.scss
@@ -56,7 +56,7 @@
   }
 
   .initial-form {
-    margin: 6rem 0 0 0;
+    margin: 7rem 0 0 0;
 
     .form {
       padding: 0.6rem 1.5rem 1.5rem 1.5rem;
